# shellcue

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
.reports/2026-07-19-apple-terminal-session-save/: README.md
.tasks/T-104-2026-07-18-build-standard-command-quality-eval/: draft.md  events.jsonl  planning.md  qa.md  task.md
.tasks/T-104-2026-07-18-build-standard-command-quality-eval/artifacts/: analyze.md  model-only-alpha-v6-baseline.md  planning-locus-code-review.md
.tasks/T-107-2026-07-19-freeze-history-context-and-privacy-contr/: events.jsonl  planning.md  task.md
.tasks/T-108-2026-07-19-build-history-conditioned-dataset-and-ev/: events.jsonl  planning.md  task.md
.tasks/T-109-2026-07-19-train-and-select-model-only-checkpoint/: events.jsonl  planning.md  task.md
.tasks/T-110-2026-07-19-promote-checkpoint-and-verify-terminal-r/: events.jsonl  planning.md  task.md
.tasks/T-111-2026-07-19-create-shellcue-training-repository-and-/: draft.md  events.jsonl  planning.md  task.md
contracts/: autocomplete-v2-vectors.json
docs/: install.md  milestones.md
docs/contracts/: autocomplete-v2.md
src/shellcue/: __init__.py  cli.py
src/shellcue/core/: __init__.py  safety.py  (+1 more)
tests/: conftest.py  test_artifact.py  test_candidates.py  test_cli_contract.py  test_context.py  test_daemon.py  test_doctor.py  test_installer_contract.py  test_neural.py  test_prompt_contract.py  test_public_boundary.py  test_redaction.py  test_registry.py  test_service.py  test_shell_integration.py  test_standard_commands.py  test_uninstall.py
(+28 files in other folders)
